# TurboDiff

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TO-DO.md  plot_airfoils.py  plot_combined.py  plot_efficiency.py  pyproject.toml  sonar-project.properties  test_airfoil_integration.py  test_cst.py
.github/workflows/: sonarcloud.yml  turbodiff-backend-AutoDeployTrigger-5fcc2e4b-ce22-49a9-8016-04ef346c2e24.yml
Airfoils/: Static_Object.ipynb
Backend/: main.py
Backend/src/routes/: cst_routes.py
Backend/src/utils/: dat_to_cst.py  (+1 more)
docs/: conf.py  index.md  index.rst
examples/: blasius_boundary_layer_benchmark.py  dfg_benchmark.py  example_file.py  lid_driven_cavity_benchmark.py  naca0012_rans_benchmark.py  naca0012_rans_benchmark_vis.py  optimize_airfoil.py  optimize_airfoil_rans.py  optimize_naca_suite.py  optimize_shape.py  optimize_shape2.py  poiseuille_benchmark.py  sa_decay_benchmark.py  sa_flat_plate_benchmark.py  taylor_green_vortex_benchmark.py  turek_hron_benchmark.py  validate_cst_stream.py  validate_stream.py  validate_streaming_server.py  visualize_airfoil.py  visualize_airfoil_cst.py  visualize_jax.py
scripts/: cleanup_neon_test_data.py
src/turbodiff/: __init__.py  _jax_config.py  codingconventions.md
tests/: test_airfoil.py  test_base_cfd_benchmarks.py  test_geometry.py  test_jax_ready.py  test_masking.py  test_storage_repository.py  test_storage_repository_postgres.py  test_tester.py  validate_optimization_server.py  validate_streaming_server.py
tests/numerical_solvers/: test_siedel_solver.py
tests/simulator/: test_tester.py
(+35 files in other folders)
